--- a/src/main/resources/templates/category/add.html
+++ b/src/main/resources/templates/category/add.html
@@ -2,12 +2,14 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 <body class="container">
+
 <nav th:replace="fragments :: navigation"></nav>
+
 <h2 th:text="${title}">Default Title</h2>
 
 
 
-<form method="post" style="max-width:600px;" th:object="${cheese}">
+<form method="post" style="max-width:600px;" th:object="${category}">
     <div class="form-group">
         <label th:for="name">Name</label>
         <input class="form-control" th:field="*{name}" />
@@ -19,16 +21,7 @@
         <span th:errors="*{description}" class="error"></span>
     </div>
 
-    <div class="form-group">
-        <label th:for="category">Category</label>
-        <select th:field="*{category}">
-            <option th:each="category : ${categories}"
-                    th:text="${category.name}"
-                    th:value="${category.id}"></option>
-        </select>
-    </div>
-
-    <input type="submit" class="btn btn-success" value="Add Cheese" />
+    <input class="btn btn-success" type="submit" value="Add Category" />
 </form>
 
 </body>
