--- a/src/main/resources/templates/cheese/edit.html
+++ b/src/main/resources/templates/cheese/edit.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
+
 <body class="container">
+
 <nav th:replace="fragments :: navigation"></nav>
+
 <h2 th:text="${title}">Default Title</h2>
 
 
 
-<form method="post" style="max-width:600px;" th:object="${cheese}">
+<form method="post" th:object="${cheese}" action="/cheese/edit">
     <div class="form-group">
         <label th:for="name">Name</label>
         <input class="form-control" th:field="*{name}" />
@@ -15,20 +18,21 @@
     </div>
     <div class="form-group">
         <label th:for="description">Description</label>
-        <input class="form-control" th:field="*{description}" />
+        <input class="form-control" th:field="*{description}"/>
         <span th:errors="*{description}" class="error"></span>
     </div>
-
     <div class="form-group">
-        <label th:for="category">Category</label>
+        <label th:for="category">Type</label>
         <select th:field="*{category}">
             <option th:each="category : ${categories}"
-                    th:text="${category.name}"
-                    th:value="${category.id}"></option>
+                    th:text="${category.name}" th:value="${category.id}"></option>
         </select>
+        <span th:errors="*{category}" class="error"></span>
     </div>
 
-    <input type="submit" class="btn btn-success" value="Add Cheese" />
+    <input th:unless="${cheeseId}" type="hidden" name="cheeseId" th:value="${cheese.id}" />
+    <input th:if="${cheeseId}" type="hidden" name="cheeseId" th:value="${cheeseId}" />
+    <input type="submit" class="btn btn-outline-dark" value="Edit Cheese" />
 </form>
 
 </body>
