--- a/src/main/resources/templates/cheese/index.html
+++ b/src/main/resources/templates/cheese/index.html
@@ -4,28 +4,41 @@
 
 <body class="container">
 
-<h1 th:text="${title}">Default Title</h1>
-
 <nav th:replace="fragments :: navigation"></nav>
 
-<p th:unless="${cheeses} and ${cheeses.size()}">no cheese :(</p>
+<h2 th:text="${title}">Default Title</h2>
 
+
+
+<p th:unless="${cheeses} and ${cheeses.size()}">no cheese :(</p>
 
 <table class="table">
 
     <tr>
         <th>Name</th>
         <th>Description</th>
-        <th>Type</th>
+        <th>Category</th>
+        <th>Menus</th>
     </tr>
 
     <tr th:each="cheese : ${cheeses}">
-        <td th:text="${cheese.name}"></td>
+        <td><a th:href="'/cheese/edit/'+${cheese.id}" th:text="${cheese.name}"></a></td>
         <td th:text="${cheese.description}"></td>
-        <td th:text="${cheese.type.name}"></td>
+        <td th:text="${cheese.category.name}"></td>
+        <td><a style="display: block;" th:each="menu : ${cheese.menus}" th:href="'/menu/view/'+${menu.id}" th:text="${menu.name}"></a></td>
     </tr>
 
 </table>
 
+<div th:unless="${categoryId}">
+    <a href="/cheese/add"><button type="button" class="btn btn-outline-dark">Add Cheese</button></a>
+    <a href="/cheese/remove"><button type="button" class="btn btn-outline-dark">Remove Cheese</button></a>
+</div>
+<div th:if="${categoryId}">
+    <a th:href="'/category/edit/'+${categoryId}"><button type="button" class="btn btn-outline-dark">Edit Category</button></a>
+</div>
+<br/>
+<br/>
+<br/>
 </body>
 </html>
